# scap

./: .gitignore  CLAUDE.md  CMakeLists.txt  Future.md  README.md  build.sh  build_cef_from_source.sh  build_simple_cef.sh  demo_working_system.py  download_cef_direct.sh  manual_cef_setup.md  requirements.txt  requirements_simple.txt  start_server.py  start_server_safe.py
include/: screen_capture_handler.h  tiled_encoder.h
src/: frame_data.proto  frame_data_pb2.py  main.cpp  pyppeteer_browser_manager.py  screen_capture_handler.cpp  simple_cef_browser.cpp  simple_cef_browser.h  tiled_encoder.cpp  wasm_decoder.cpp  websocket_server.py
tests/: .gitignore  demo_complete_system.py  demo_streaming.py  final_demo.py  minimal_cef_test  minimal_cef_test.cpp  test_cef_initialization.py  test_cef_simple.py  test_client.py  test_server_startup.py
tests/legacy/: build_simple_cef.sh  debug_cef.py  debug_cef_crash.py  debug_cef_fixed.py  download_cef_direct.sh  mock_cef.py  python_bindings.cpp  setup_simple_cef.py  simple_cef_browser.cpp  simple_cef_browser.h  test_browser_rendering.py  test_cef_init.py  test_cef_simple.py  test_pixel_access.py  test_pixel_buffer.py  test_pyppeteer_red.py  test_server_basic.py  test_simple_import.py  test_stream_capture.py  test_websocket_server.py
tests/legacy/working_cef/: chrome_100_percent.pak  chrome_200_percent.pak  force_render  force_render.cpp  headless_handler.cc  headless_handler.h  headless_main.cc  simple_test  simple_test.cpp
web/: index.html  main.js  protobuf_decoder.js
